--- a/index.css
+++ b/index.css
@@ -1,9 +1,9 @@
 * {
   margin: 0;
+  font-family: Helvetica;
 }
 
 h1 {
-  font-family: Helvetica;
   font-size: 100px;
   font-weight: bold;
   text-align: center;
@@ -25,7 +25,6 @@ body {
 
 .brushes {
     background-color: mediumspringgreen;
-    font-family: Helvetica;
     font-size: 32px;
     font-weight: bold;
     color: white;
@@ -34,7 +33,6 @@ body {
 
 .frames {
   background-color: lightcoral;
-  font-family: Helvetica;
   font-size: 32px;
   font-weight: bold;
   color: white;
@@ -43,7 +41,6 @@ body {
 
 .paint {
   background-color: skyblue;
-  font-family: Helvetica;
   font-size: 32px;
   font-weight: bold;
   color: white;
@@ -57,7 +54,6 @@ img {
 }
 
 h3 {
-  font-family: Helvetica;
   font-size: 25px;
   font-weight: bold;
   color: black;
@@ -66,7 +62,6 @@ h3 {
 }
 
 p {
-  font-family: Helvetica;
   font-size: 20px;
   color: black;
   margin-bottom: 25px;
@@ -74,7 +69,27 @@ p {
 }
 
 span {
-    font-family: Helvetica;
     font-weight: bold;
     color: blue;
+}
+
+.order__button {
+  cursor: pointer;
+  margin-bottom: 25px;
+  margin-left: 10px;
+  height: 50px;
+  width: 100px;
+  border-radius: 5px;
+  border: 1px solid black;
+  background-color: lightblue;
+  font-weight: bold;
+  color: #000;
+  transition: all 0.5s ease;
+}
+
+.order__button:hover {
+  background-color: lightblue;
+  color: black;
+  border: 1px solid black;
+  opacity: 0.5;
 }
